Fix text spacing in intro animation

--- a/src/components/ParallaxHeader/styles.scss
+++ b/src/components/ParallaxHeader/styles.scss
@@ -12,22 +12,22 @@
       background: none;
     }
     margin-top: 40vh;
-    margin-bottom: 400vh;
+    margin-bottom: 500vh;
   }
   &:nth-child(3) {
-    margin-top: 40vh;
-    margin-bottom: 60vh;
+    margin-top: 0vh;
+    margin-bottom: 240vh;
   }
   &:nth-child(4) {
-    margin-top: 40vh;
-    margin-bottom: 40vh;
+    margin-top: 0vh;
+    margin-bottom: 100vh;
   }
   &:nth-child(5) {
-    margin-top: 40vh;
-    margin-bottom: 40vh;
+    margin-top: 0vh;
+    margin-bottom: 80vh;
   }
   &:nth-child(6) {
-    margin-top: 40vh;
+    margin-top: 0vh;
     margin-bottom: 10vh;
   }
   > p {
